Fix spacing below pledge cards

--- a/src/containers/NewPledge.css
+++ b/src/containers/NewPledge.css
@@ -40,11 +40,6 @@
   color: black;
 }
 
-.new-pledge-component .new-pledge-container .submit-button-wrapper {
-  display: flex;
-  justify-content: center;
-}
-
-.new-pledge-component .new-pledge-container .submit-button {
-  width: 300px;
+.new-pledge-component .new-pledge-container .submit-pledge--button__wrapper.red--button__wrapper {
+  margin-bottom: 5em;
 }
